alignment issues cont.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,7 @@ nav {
     font-family: Anisette STD;
     width: 73%;
     padding: 1%;
+    margin-top: 10px;
 }
 h1 {
     font-size: 68px;
@@ -40,7 +41,9 @@ h4 {
     width: 23%;
     padding: 1%;
     text-align: center;
-    display: inline-block
+    display: inline-block;
+    margin-top: 10px;
+
 }
 #hero {
     height: 600px;
@@ -50,7 +53,8 @@ h4 {
     background-color: #F2E6DF;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover
+    background-size: cover;
+    margin: 0 auto;
 }
 #footer {
     Height: 110px;
@@ -73,6 +77,7 @@ ul {
     vertical-align: bottom;
     text-align: left;
     display: inline-block;
+    padding-bottom: 0%;
 }
 
 #header {
@@ -80,4 +85,9 @@ ul {
 }
 html {
     background-color: #F2E6DF;
+}
+.footerinline {
+    display: inline-block;
+    align-items: top;
+    margin-right: 15px;
 }
